--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
+  "devDependencies": {
+    "postcss-cli": "^6.1.3",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-scss": "^3.12.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint src",
+    "stylelint": "stylelint 'src/**/*.scss'"
   },
   "eslintConfig": {
     "extends": "react-app"
