--- a/package.json
+++ b/package.json
@@ -3,19 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "author": "Max Maslenko",
-  "dependencies": {
-    "node-sass": "^4.13.0",
-    "normalize.css": "^8.0.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
-  },
-  "devDependencies": {
-    "postcss-cli": "^6.1.3",
-    "stylelint": "^11.1.1",
-    "stylelint-config-recommended-scss": "^4.0.0",
-    "stylelint-scss": "^3.12.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -23,6 +10,23 @@
     "eject": "react-scripts eject",
     "eslint": "eslint src",
     "stylelint": "stylelint 'src/**/*.scss'"
+  },
+  "dependencies": {
+    "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "postcss-cli": "^6.1.3",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-scss": "^3.12.1"
   },
   "eslintConfig": {
     "extends": "react-app"
