--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "pharos-test",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "author": "Max Maslenko",
+  "homepage": "https://biggus-dickus.github.io/pharos-test",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint src",
-    "stylelint": "stylelint 'src/**/*.scss'"
+    "stylelint": "stylelint 'src/**/*.scss'",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "node-sass": "^4.13.0",
@@ -23,6 +25,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "postcss-cli": "^6.1.3",
     "stylelint": "^11.1.1",
     "stylelint-config-recommended-scss": "^4.0.0",
